--- a/ios-engineer.html
+++ b/ios-engineer.html
@@ -44,7 +44,7 @@
 <p><span class="badge badge-light">Mountain View, California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pixelberry-studios.workable.com/j/D7B9FDAE57'>Pixelberry Studios - Jobs: Senior Backend Engineer - Top 25 Mobile Game - Apply online</a></h5> 
+<h5><a href='https://pixelberry-studios.workable.com/j/D7B9FDAE57'>Pixelberry Studios - Jobs: Senior Backend Engineer - Top 25 Mobile Game - Apply online</a></h5> 
 <p><span class="badge badge-light">Mountain View, California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -76,7 +76,7 @@
 <p><span class="badge badge-light">Canada Italy</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/riv/1a6b7326-7209-4b37-b473-b3dc6cfb59f4'>Rival - iOS Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/riv/1a6b7326-7209-4b37-b473-b3dc6cfb59f4'>Rival - iOS Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -165,11 +165,11 @@ and at?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thredup/b71c9486-929c-48ad-a745-020cfab30f42'>thredUP - Sr. iOS Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/thredup/b71c9486-929c-48ad-a745-020cfab30f42'>thredUP - Sr. iOS Engineer</a></h5> 
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999692057558-sr-ios-engineer-for-global-sportswear-co-'>Aroghia Group Sr. iOS Engineer for Global Sportswear Co. | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999692057558-sr-ios-engineer-for-global-sportswear-co-'>Aroghia Group Sr. iOS Engineer for Global Sportswear Co. | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -276,7 +276,7 @@ designs low latency architecture solutions and leverages machine learning?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<h5><a href='https://freelancer.workable.com/j/05E445FACE'>Freelancer.com - Jobs: iOS Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://freelancer.workable.com/j/05E445FACE'>Freelancer.com - Jobs: iOS Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -288,7 +288,7 @@ designs low latency architecture solutions and leverages machine learning?...</p
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/houzz/20a564b1-3c40-4483-9409-c608bc20055a'>Houzz - Junior iOS Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/houzz/20a564b1-3c40-4483-9409-c608bc20055a'>Houzz - Junior iOS Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -320,7 +320,7 @@ designs low latency architecture solutions and leverages machine learning?...</p
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
-<h5><a href='https://lifesum.teamtailor.com/jobs/252635-junior-ios-engineer-growth-team?editor=true'>Junior iOS Engineer - Growth Team - Lifesum</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lifesum.teamtailor.com/jobs/252635-junior-ios-engineer-growth-team?editor=true'>Junior iOS Engineer - Growth Team - Lifesum</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 2, 2019 ... We are improving lives through better eating and we are doing this through 
 software that is highly personalized for our user's needs. By tapping into mobil.</p>
@@ -383,7 +383,7 @@ and wearables, and translates these into activities and behavioural patterns.</p
 <p><span class="badge badge-light">Edinburgh</span></p>
 <p>Posted on: 2019-07-06</p>
 <hr/>
-<h5><a href='https://lyst.workable.com/j/A32C045B38?viewed=true'>Lyst - Jobs: Senior iOS Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lyst.workable.com/j/A32C045B38?viewed=true'>Lyst - Jobs: Senior iOS Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 25, 2019 ... Lyst is a global search engine that connects millions of shoppers to the fashion 
 they love. Our product combines data science, software engineering and UX?...</p>
@@ -450,7 +450,7 @@ they love. Our product combines data science, software engineering and UX?...</p
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thumbtack/jobs/1756373'>Job Application for Senior iOS Engineer at Thumbtack</a></h5> 
+<h5><a href='https://boards.greenhouse.io/thumbtack/jobs/1756373'>Job Application for Senior iOS Engineer at Thumbtack</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
